--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ function showVideo() {
 <script>
  function letsgo(){
  $("#process1").show();    
- window.location.href="login.html";
+ window.location.href="data.html";
  }   
 </script>
 </body>
